# Payroll-Case-Study

./: .gitignore  CMakeLists.txt  README.md  compileCommand.txt
Headers/Affiliation/: Affiliation.h  NoAffiliation.h  UnionAffiliation.h
Headers/Database/: DeleteAffiliationOperation.h  Employee.h  InMemoryDb.h  LoadEmployeeOperation.h  PayrollDatabase.h  SaveAffiliationOperation.h  SaveEmployeeOperation.h  SaveSaleReceiptOperation.h  SaveServiceChargeOperation.h  SaveTimeCardOperation.h  SqlDb.h  UpdatePayClassificationOperation.h  UpdatePayMethodOperation.h
Headers/PayClassification/: ComissionPayClassification.h  HourlyPayClassification.h  MonthlyPayClassification.h  PayClassification.h
Headers/PayMethod/: DirectPayMethod.h  HoldPayMethod.h  MailPayMethod.h  PayMethod.h
Headers/PaySchedule/: MonthlyPaymentSchedule.h  PaymentSchedule.h  WeeklyPaymentSchedule.h
Headers/PayrollPay/: PayCheck.h
Headers/Test/: PayrollTest.h
Headers/Transaction/: AddComissionEmployeeTransaction.h  AddEmployeeTransaction.h  AddHourlyEmployeeTransaction.h  AddSalariedEmployeeTransaction.h  AddSaleReceiptTransaction.h  AddServiceChargeTransaction.h  AddTimeCardTransaction.h  ChangeEmployeeAffiliationTransaction.h  ChangeEmployeeDirectMethodTransaction.h  ChangeEmployeeEmailTransaction.h  ChangeEmployeeHourlyTransaction.h  (+11 more)
Test/: CMakeLists.txt  PayrollTest.cpp  SqlDbTest.cpp
src/: CMakeLists.txt
src/Payroll.Affiliation/: Affiliation.cpp  CMakeLists.txt  NoAffiliation.cpp  UnionAffiliation.cpp
src/Payroll.Application/: CMakeLists.txt  a.out  main.cpp  myproject  payrollDb.db
src/Payroll.Classification/: CMakeLists.txt  ComissionPayClassification.cpp  HourlyPayClassification.cpp  MonthlyPayClassification.cpp
src/Payroll.Database/: CMakeLists.txt  DeleteAffiliationOperation.cpp  Employee.cpp  InMemoryDb.cpp  LoadEmployeeOperation.cpp  PayrollDatabase.cpp  SaveAffiliationOperation.cpp  SaveEmployeeOperation.cpp  SaveSaleReceiptOperation.cpp  SaveServiceChargeOperation.cpp  SaveTimeCardOperation.cpp  SqlDb.cpp  UpdatePayClassificationOperation.cpp  UpdatePayMethodOperation.cpp  sqlite3
src/Payroll.Methods/: CMakeLists.txt  DirectPayMethod.cpp  HoldPayMethod.cpp  MailPayMethod.cpp
src/Payroll.Pay/: CMakeLists.txt  PayCheck.cpp
src/Payroll.Schedules/: CMakeLists.txt  MonthlyPaymentSchedule.cpp  WeeklyPaymentSchedule.cpp
src/Payroll.Transaction/: AddComissionEmployeeTransaction.cpp  AddEmployeeTransaction.cpp  AddHourlyEmployeeTransaction.cpp  AddSalariedEmployeeTransaction.cpp  AddSaleReceiptTransaction.cpp  AddServiceChargeTransaction.cpp  AddTimeCardTransaction.cpp  CMakeLists.txt  ChangeEmployeeAffiliationTransaction.cpp  ChangeEmployeeDirectMethodTransaction.cpp  ChangeEmployeeEmailTransaction.cpp  ChangeEmployeeHoldMethodTransaction.cpp  ChangeEmployeeHourlyTransaction.cpp  ChangeEmployeeMailMethodTransaction.cpp  ChangeEmployeeMethodTransaction.cpp  ChangeEmployeeNameTransaction.cpp  ChangeEmployeeNoUnionTransaction.cpp  ChangeEmployeePayClassTransaction.cpp  ChangeEmployeeTransaction.cpp  ChangeEmployeeUnionTransaction.cpp  DeleteEmployeeTransaction.cpp  PayDayTransaction.cpp
